--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#2E7D32</color>
+    <color name="colorPrimario">#009431</color>
+    <color name="verde_texto_primario">#009431</color>
+    <color name="azul_facebook">#BF4267B2</color>
 </resources>
